# ImgNav

./: .gitignore
SpotNavigation/: Drafts.db  Program.cs  SpotNavigation.csproj  SpotNavigation.sln  Startup.cs
SpotNavigation/Controllers/: HomeController.cs
SpotNavigation/Data/: DraftDbContext.cs  DraftDbInitializer.cs
SpotNavigation/Models/: Draft.cs  ErrorViewModel.cs  Solution.cs
SpotNavigation/Properties/: launchSettings.json
SpotNavigation/Views/: _ViewImports.cshtml
SpotNavigation/Views/Home/: Index.cshtml  SendSolution.cshtml
SpotNavigation/Views/Shared/: _Layout.cshtml
spot_ws/spot_mil/: CMakeLists.txt  package.xml  setup.py
spot_ws/spot_mil/launch/: spot.launch
spot_ws/spot_mil/scripts/: grid_utils.py  keyboard_teleop.py  spot_wrapper.py  web_controller.py
spot_ws/spot_mil/scripts/templates/: index.html
spot_ws/spot_ros_msgs/: CMakeLists.txt
spot_ws/spot_ros_msgs/msg/: BraitenMsg.msg  targetInfo.msg  thermalInfo.msg  zedInfo.msg
